# qt-scrcpyservice

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  adbcommandrunner.cpp  adbcommandrunner.h  bufferreceiver.cpp  bufferreceiver.h  byteutil.h  controlmsg.cpp  controlmsg.h  main.cpp  scrcpyserver.cpp  scrcpyserver.h  videodecoder.cpp  videodecoder.h
src/render/: qpaintervideosurface.cpp  qpaintervideosurface_p.h  videowidget.cpp  videowidget.h
test/: CMakeLists.txt  app.cpp  app.h  app.ui  main.cpp
